--- a/2/3/src/style.scss
+++ b/2/3/src/style.scss
@@ -110,6 +110,7 @@ html {
 }
 .inner {
     padding: 1rem 1rem 2rem;
+    text-align: center;
     will-change: transform;
     //backdrop-filter: blur(2px);
     background-color: rgba(255,255,255,0.8);
@@ -134,7 +135,7 @@ html {
 }
 
 .description {
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     line-height: 1.5rem;
     opacity: 0;
     animation: opacity .5s 2s 1 forwards;
@@ -154,14 +155,9 @@ $range-label-width: 60px;
 
 .money {
     display: flex;
-    align-items: center;
-    gap: 2rem;
-
-    @media screen and (orientation: portrait) {
-        flex-direction: column;
-        align-items: stretch;
-        gap: 1rem;
-    }
+    flex-direction: column;
+    align-items: stretch;
+    gap: .5rem;
 
     &__up {
         flex-grow: 2;
@@ -169,7 +165,7 @@ $range-label-width: 60px;
         flex-direction: column;
         align-items: stretch;
         justify-content: space-between;
-        gap: 1rem;
+        gap: .5rem;
         &-values {
             display: flex;
             justify-content: space-between;
@@ -182,7 +178,7 @@ $range-label-width: 60px;
         background-color: var(--colorPrimary);
         border: 1px solid var(--colorPrimary);
         border-radius: 20rem;
-        padding: 1rem 2rem;
+        padding: 1rem 5rem;
         color: var(--colorWhite);
         text-transform: uppercase;
         font-size: 1rem;
