--- a/2/4/src/style.scss
+++ b/2/4/src/style.scss
@@ -115,6 +115,7 @@ html {
     padding: 1rem 1rem 2rem;
     will-change: transform;
     //backdrop-filter: blur(2px);
+    text-align: center;
     background-color: rgba(255,255,255,0.8);
     animation: innerTransform 2s forwards;
     @media (orientation: landscape) {
@@ -137,7 +138,7 @@ html {
 }
 
 .description {
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     line-height: 1.5rem;
     opacity: 0;
     animation: opacity .5s 2s 1 forwards;
@@ -157,14 +158,10 @@ $range-label-width: 60px;
 
 .money {
     display: flex;
-    align-items: center;
-    gap: 2rem;
+    flex-direction: column;
+    align-items: stretch;
+    gap: .5rem;
 
-    @media screen and (orientation: portrait) {
-        flex-direction: column;
-        align-items: stretch;
-        gap: 1rem;
-    }
 
     &__up {
         flex-grow: 2;
@@ -172,7 +169,7 @@ $range-label-width: 60px;
         flex-direction: column;
         align-items: stretch;
         justify-content: space-between;
-        gap: 1rem;
+        gap: .5rem;
         &-values {
             display: flex;
             justify-content: space-between;
@@ -185,7 +182,7 @@ $range-label-width: 60px;
         background-color: var(--colorPrimary);
         border: 1px solid var(--colorPrimary);
         border-radius: 20rem;
-        padding: 1rem 2rem;
+        padding: 1rem 5rem;
         color: var(--colorWhite);
         text-transform: uppercase;
         font-size: 1rem;
